--- a/WEB/Attendance.html
+++ b/WEB/Attendance.html
@@ -94,6 +94,29 @@
       cursor: pointer;
     }
 
+    /* table tr:hover {
+      text-decoration: none;
+      transform: translateX(5px);
+      transition:all 0.2s ease-in-out;
+    } */
+    tbody tr {
+      transition: all 0.25s ease-in-out;
+    }
+
+    tbody tr:hover {
+
+      transform: translateX(6px);
+      cursor: pointer;
+
+    }
+
+    .table,
+    .table th,
+    .table td {
+      border: none !important;
+    }
+
+
     @media (max-width: 991px) {
       .sidebar {
         width: 100px;
@@ -135,7 +158,8 @@
       <a class="nav-link" href="./reminders.html"><i class="bi bi-bell"></i> <span>Reminders</span></a>
       <a class="nav-link" href="./users.html"><i class="bi bi-people"></i> <span>Users</span></a>
       <a class="nav-link" href="./departments.html"><i class="bi bi-diagram-3"></i> <span>Departments</span></a>
-      <a class="nav-link " href="./leave_request.html"><i class="bi bi-calendar-check"></i> <span>Leave Requests</span></a>
+      <a class="nav-link " href="./leave_request.html"><i class="bi bi-calendar-check"></i> <span>Leave
+          Requests</span></a>
       <a class="nav-link" href="./payroll.html"><i class="bi bi-cash-stack"></i> <span>Payroll</span></a>
       <a class="nav-link" href="./viewJobpostData.html"><i class="bi bi-briefcase"></i> <span>Job Posts</span></a>
       <a class="nav-link active" href="./Attendance.html"><i class="bi bi-person-check"></i> <span>Attendance</span></a>
@@ -177,9 +201,9 @@
     <div class="container-fluid">
       <div class="card p-4">
 
-        <h6 class="mb-3">Attendance List</h6>
+        <!-- <h6 class="mb-3">Attendance List</h6> -->
 
-        <table class="table table-attendance mt-3">
+        <table class="table table-attendance mt-3 align-middle">
           <thead>
             <tr>
               <th>ID</th>
@@ -268,10 +292,7 @@
               </button>
             </div>
           </form>
-
         </div>
-
-
       </div>
     </div>
   </div>
@@ -305,8 +326,7 @@
               <td>${e.check_in}</td>
               <td>${e.check_out}</td>
               <td>${e.status}</td>
-              <td>
-
+              <td>                                                                                                                                      
                 <button class="text-center btn btn-primary btn-sm showApplicationBtn" data-bs-toggle="modal" data-bs-target="#updateAttendanceModal" id="edit" data-id="${e._id}"><i class="bi bi-pencil"></i></button>
                 <button class="text-center btn btn-danger btn-sm deltaeApplicationBtn" id="delete" data-id="${e._id}"><i class="bi bi-trash"></i></button>
               </td>
@@ -337,6 +357,8 @@
               body: JSON.stringify(obj)
             })
             const sindata = await sinfetch.json()
+            console.log(sindata);
+
             currentRecord = sindata
             // console.log(sindata,"sindata");          
             document.getElementById("editId").value = sindata._id
@@ -355,11 +377,11 @@
           const id = document.getElementById("editId").value
           const upobj = {
             emp_id: currentRecord.emp_id,
-            Date: document.getElementById("edit_date").value,
-            Check_in: document.getElementById("edit_check_in").value,
-            Check_out: document.getElementById("edit_check_out").value,
-            Stetus: document.getElementById("edit_status").value
-          }
+            date: document.getElementById("edit_date").value,
+            check_in: document.getElementById("edit_check_in").value,
+            check_out: document.getElementById("edit_check_out").value,
+            status: document.getElementById("edit_status").value
+          };
           // console.log(upobj, "up");
 
           const upfetch = await fetch("http://localhost:3000/updatedattandancedata", {
