--- a/WEB/Modal_Page/Attendance-form.html
+++ b/WEB/Modal_Page/Attendance-form.html
@@ -106,8 +106,8 @@
                         <div class="col-12 mt-3 d-flex justify-content-center gap-3">
 
                             <!-- SAVE -->
-                            <button type="reset" class="btn btn-custom px-4">
-                                Reset
+                            <button type="submit" class="btn btn-custom px-4">
+                                Submit
                             </button>
 
                             <!-- CLOSE -->
