--- a/WEB/viewJobpostData.html
+++ b/WEB/viewJobpostData.html
@@ -53,8 +53,25 @@
             color: #007bff;
         }
 
+        tbody tr {
+            transition: all 0.25s ease-in-out;
+        }
+
         label {
             cursor: pointer;
+        }
+
+        tbody tr:hover {
+
+            transform: translateX(6px);
+            cursor: pointer;
+
+        }
+
+        .table,
+        .table th,
+        .table td {
+            border: none !important;
         }
     </style>
 </head>
@@ -81,7 +98,8 @@
                 <span>LeaveRequests</span></a>
             <a class="nav-link" href="./payroll.html"><i class="bi bi-cash-stack"></i> <span>Payroll</span></a>
 
-            <a class="nav-link active" href="./viewJobpostData.html"><i class="bi bi-briefcase"></i> <span>Job Posts</span></a>
+            <a class="nav-link active" href="./viewJobpostData.html"><i class="bi bi-briefcase"></i> <span>Job
+                    Posts</span></a>
             <a class="nav-link " href="./Attendance.html"><i class="bi bi-person-check"></i> <span>Attendance</span></a>
 
         </nav>
@@ -106,7 +124,7 @@
                     </div>
                 </div>
                 <div>
-                    <table class="table table-bordered">
+                    <table class="table ">
                         <thead class="table-dark">
                             <tr>
                                 <th>Id</th>
