--- a/WEB/Register.html
+++ b/WEB/Register.html
@@ -129,7 +129,7 @@
           <form method="POST" id="employeeData">
 
             <div class="row g-3">
-              <input type="hidden" name="type" value="employee">
+              <!-- <input type="hidden" name="type" value="employee"> -->
 
               <!-- First Name -->
               <div class="col-md-4">
@@ -398,21 +398,21 @@
       });
 
       //6 :API for store role.html rolename dynamic in register.html
-      const getroll = await fetch("http://localhost:3000/getroledata");
-      // console.log(getroll);
+      // const getroll = await fetch("http://localhost:3000/getroledata");
+      // // console.log(getroll);
 
-      const rlldata = await getroll.json()
-      console.log(rlldata);
+      // const rlldata = await getroll.json()
+      // console.log(rlldata);
 
-      const roll_select = document.querySelector('select[name="role_id"]');
-      console.log(roll_select);
+      // const roll_select = document.querySelector('select[name="role_id"]');
+      // console.log(roll_select);
 
-      rlldata.forEach(s => {
-        const option = document.createElement('option')
-        option.value = s._id;
-        option.textContent = s.role_name
-        roll_select.appendChild(option)
-      });
+      // rlldata.forEach(s => {
+      //   const option = document.createElement('option')
+      //   option.value = s._id;
+      //   option.textContent = s.role_name
+      //   roll_select.appendChild(option)
+      // });
 
 
 
@@ -432,15 +432,15 @@
         const lastresp = await lastemp.json()
         // console.log(lastresp, "last");
         // console.log(lastresp[0].company_id,"company id");
-        let lastempcode = lastresp[0].emp_code;
+        // let lastempcode = lastresp[0].emp_code;
         // console.log(lastempcode);
 
         // let emp_code = "NEXTGEN" + String(parseInt(lastempcode.replace("NEXTGEN", "") + 1).padStart(3, '0'));
-        let emp_code = "NEXTGEN" + String(parseInt(lastempcode.replace("NEXTGEN", "")) + 1).padStart(3, '0');
-        return emp_code;
+        // let emp_code = "NEXTGEN" + String(parseInt(lastempcode.replace("NEXTGEN", "")) + 1).padStart(3, '0');
+        // return emp_code;
       };
       // formData.set('emp_code', await lastemploye());
-      obj.emp_code = await lastemploye();
+      // obj.emp_code = await lastemploye();
 
 
       const response = await fetch('http://localhost:3000/storeEmployee', {
@@ -451,7 +451,7 @@
         body: JSON.stringify(obj),
       });
       const result = await response.json();
-      // console.log("res", result);
+      console.log("res", result);
 
       const responseMsg = document.getElementById('responseMsg');
       if (response.ok) {
