--- a/WEB/approvals.html
+++ b/WEB/approvals.html
@@ -80,7 +80,26 @@
     .btn-reject:hover {
       background: #c82333;
     }
+ tbody tr {
+            transition: all 0.25s ease-in-out;
+        }
 
+        label {
+            cursor: pointer;
+        }
+
+        tbody tr:hover {
+
+            transform: translateX(6px);
+            cursor: pointer;
+
+        }
+
+        .table,
+        .table th,
+        .table td {
+            border: none !important;
+        }
     @media (max-width: 991px) {
       .sidebar {
         width: 100px;
