--- a/WEB/departments.html
+++ b/WEB/departments.html
@@ -88,7 +88,26 @@
 
     .btn-delete:hover {
       color: #a71d2a;
-    }
+    } tbody tr {
+            transition: all 0.25s ease-in-out;
+        }
+
+        label {
+            cursor: pointer;
+        }
+
+        tbody tr:hover {
+
+            transform: translateX(6px);
+            cursor: pointer;
+
+        }
+
+        .table,
+        .table th,
+        .table td {
+            border: none !important;
+        }
 
     @media (max-width: 991px) {
       .sidebar {
@@ -317,7 +336,7 @@
           console.log(updata);
 
           if (upres.ok) {
-            alert(`${updata.msg}`)
+            alert(`${updata.message}`)
             location.reload()
           }
           else{
@@ -346,7 +365,7 @@
             console.log(deldata);
 
             if (delres.ok) {
-               alert(`${deldata.msg}`)
+               alert(`${deldata.message}`)
                location.reload()
             }
             else{
