--- a/WEB/leave_request.html
+++ b/WEB/leave_request.html
@@ -129,6 +129,22 @@
     button a:hover {
       color: #fff;
     }
+     tbody tr {
+      transition: all 0.25s ease-in-out;
+    }
+
+    tbody tr:hover {
+
+      transform: translateX(6px);
+      cursor: pointer;
+
+    }
+
+    .table,
+    .table th,
+    .table td {
+      border: none !important;
+    }
 
 
 
