--- a/WEB/departments.html
+++ b/WEB/departments.html
@@ -162,7 +162,7 @@
       <div class="dropdown d-flex align-items-center gap-2">
 
         <!-- Leave Form Button -->
-        <a href="/Modal_Page/department.html" class="btn btn-primary">
+        <a href="/department" class="btn btn-primary">
           Department Form
         </a>
 
