--- a/WEB/leave_request.html
+++ b/WEB/leave_request.html
@@ -200,9 +200,9 @@
       <div class="dropdown d-flex align-items-center gap-2">
 
         <!-- Leave Form Button -->
-        <a href="/Modal_Page/Leave_request.html" class="btn btn-primary">
-          Leave Form
-        </a>
+          <a href="/leave_request" class="btn btn-primary">
+            Leave Form
+          </a>
 
         <!-- Admin Dropdown -->
         <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown">
