--- a/WEB/Attendance.html
+++ b/WEB/Attendance.html
@@ -176,7 +176,7 @@
       <div class="dropdown d-flex align-items-center gap-2">
 
         <!-- Leave Form Button -->
-        <a href="/Modal_Page/Attendance-form.html" class="btn btn-primary">
+        <a href="/Attendance-form" class="btn btn-primary">
           Attendance Form
         </a>
 
